durga@48demo.com.bleadtest/src/objects/AttendeeSummary__c.object
<CustomObject>
    <fields>
        <fullName>AS_Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_BlogUrl__c</fullName>
        <label>BlogUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_BusinessDescription__c</fullName>
        <label>BusinessDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_BusinessDunsNumber__c</fullName>
        <label>BusinessDunsNumber</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_BusinessEstablishedDate__c</fullName>
        <label>BusinessEstablishedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_BusinessRevenue__c</fullName>
        <label>BusinessRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_BusinessTaxId__c</fullName>
        <label>BusinessTaxId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_CellPhone__c</fullName>
        <label>CellPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_DiversityType__c</fullName>
        <label>DiversityType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_Email__c</fullName>
        <description>Mallikarjuna Set-Up  Email Field As External ID</description>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AS_FaxNumber__c</fullName>
        <label>FaxNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_HomeAddress1__c</fullName>
        <label>HomeAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeAddress2__c</fullName>
        <label>HomeAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeCity__c</fullName>
        <label>HomeCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeCountry__c</fullName>
        <label>HomeCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_HomePoBox__c</fullName>
        <label>HomePoBox</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_HomePoboxNo__c</fullName>
        <label>HomePoboxNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeState__c</fullName>
        <label>HomeState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeZip__c</fullName>
        <description>new field for home zip code</description>
        <label>HomeZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HomeZipcode__c</fullName>
        <label>HomeZipcode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_ImageUrl__c</fullName>
        <label>ImageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode1__c</fullName>
        <label>NAICSCode1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode2__c</fullName>
        <label>NAICSCode2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_NAICSCode3__c</fullName>
        <label>NAICSCode3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_NumberOfEmployees__c</fullName>
        <label>NumberOfEmployees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Prefix__c</fullName>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_PrimaryBusinessCategory1__c</fullName>
        <label>PrimaryBusinessCategory1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_PrimaryBusinessCategory__c</fullName>
        <label>PrimaryBusinessCategory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_SecondaryBusinessCategory__c</fullName>
        <label>SecondaryBusinessCategory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_ShippingAddress1__c</fullName>
        <label>ShippingAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingAddress2__c</fullName>
        <label>ShippingAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingCountry__c</fullName>
        <label>ShippingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingPhone__c</fullName>
        <label>ShippingPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_ShippingPoBox__c</fullName>
        <label>ShippingPoBox</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ShippingZipcode__c</fullName>
        <label>ShippingZipcode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_Shippingpoboxno__c</fullName>
        <label>Shippingpoboxno</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_ThroughEventBrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ThroughEventBrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AS_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WebsiteUrl__c</fullName>
        <label>WebsiteUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AS_WorkAddress1__c</fullName>
        <label>WorkAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkAddress2__c</fullName>
        <label>WorkAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkCity__c</fullName>
        <label>WorkCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkCountry__c</fullName>
        <label>WorkCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AS_WorkPoBox__c</fullName>
        <label>WorkPoBox</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_WorkState__c</fullName>
        <label>WorkState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_WorkZipCode__c</fullName>
        <label>WorkZipCode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_WorkZip__c</fullName>
        <label>WorkZip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Work_Country__c</fullName>
        <label>Work_Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_Work_States__c</fullName>
        <label>Work_States</label>
        <picklist>
            <controllingField>AS_Work_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AS_Workpoboxno__c</fullName>
        <label>Workpoboxno</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_shippingzip__c</fullName>
        <label>shippingzip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_uniqueField__c</fullName>
        <label>AS uniqueField</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_Home_Country__c</fullName>
        <label>Home_Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Home_State__c</fullName>
        <label>Home_State</label>
        <picklist>
            <controllingField>As_Home_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_SecondaryBusinessCategory1__c</fullName>
        <label>SecondaryBusinessCategory1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Shipping_Country__c</fullName>
        <label>Shipping_Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_Shipping_States__c</fullName>
        <label>Shipping_States</label>
        <picklist>
            <controllingField>As_Shipping_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_SuffixNew__c</fullName>
        <label>SuffixNew</label>
        <picklist>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>As_prefixNew__c</fullName>
        <label>prefixNew</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventBriteCount__c</fullName>
        <label>EventBriteCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_type__c</fullName>
        <label>Registration type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>AttendeeSummary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AS_FirstName__c</columns>
        <columns>AS_LastName__c</columns>
        <columns>AS_Email__c</columns>
        <columns>AS_Company__c</columns>
        <columns>AS_ImageUrl__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR_AT_{dd}{yy}_{0000000}</displayFormat>
        <label>AS_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttendeeSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>